# DynamicLibraries

./: README.md
DynamicLibrary/: CMakeLists.txt  README.md
DynamicLibrary/include/: mySharedLib.hpp
DynamicLibrary/src/: mySharedLib.cpp
app_using_lib/: CMakeLists.txt  README.md  main.cpp
